<resources>
    <string name="app_name">HelloWorld</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="button">Button</string>
    <string-array name="countries">
        <item>Việt Nam</item>
        <item>USA</item>
        <item>UK</item>
        <item>Canada</item>
        <item>France</item>
        <item>Germany</item>
        <item>Italy</item>
        <item>Spain</item>
        <item>Japan</item>
        <item>China</item>
    </string-array>

    <string-array name="operator">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
        <item>**</item>
    </string-array>
</resources>